--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Picadu</title>
+	<title>Picadu - Главная</title>
 </head>
 <body>	
 	
@@ -19,11 +19,7 @@
 					<li class="header-menu-item"><a href="#" class="header-menu-link">Горячее</a></li>
 					<li class="header-menu-item"><a href="#" class="header-menu-link">Подписки</a></li>
 				</ul>
-				<a href="#" class="menu-toggle" id="menu-toggle">
-					<span></span>
-					<span></span>
-					<span></span>
-				</a>
+
 			</nav>
 			<div class="input-group search">
 				<input type="search" class="search-input" placeholder="Поиск по сайту">
@@ -31,7 +27,11 @@
 					<img src="img/search.svg" alt="">
 				</button>
 			</div>
-			
+			<a href="#" class="menu-toggle" id="menu-toggle">
+				<span></span>
+				<span></span>
+				<span></span>
+			</a>
 		</div>
 		
 	</header>
@@ -172,7 +172,7 @@
 					</li>
 				</ul>
 			</nav>
-			<a href="#" class="button button-new-post">
+			<a href="new-post.html" class="button button-new-post">
 				<svg class="icon icon-fire">
 					<use xlink:href="img/icons.svg#fire"></use>
 				  </svg>
